--- a/client/clientStyle.css
+++ b/client/clientStyle.css
@@ -1,7 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@700&family=Shadows+Into+Light&display=swap');
+
+h1, h2{
+    font-family: 'Shadows Into Light', cursive;
+}
+
+h1, section{
+    background-color: green;
+    color: white;
+    border-radius: 10px;
+}
+
+input{
+    max-width: 200px;
+}
+
+select{
+    border: 1px solid rgb(202, 202, 202);
+    border-radius: 3px;
+}
+
 #content{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    font-family: 'Nanum Myeongjo', serif;
+}
+
+.content{
     justify-content: center;
     align-content: center;
 }
@@ -10,13 +37,13 @@
     padding: 10px;
     margin: 5px;
     margin-bottom: 20px;
-    border: 1px solid black;
+    border: 1px solid rgb(134, 134, 134);
     border-radius: 5px;
     box-shadow: 5px 10px #888888;
 }
 
 .data-entry:hover {
-    border: 3px solid black;
+    border: 3px solid rgb(134, 134, 134);
     box-shadow: 2px 5px #888888;
     animation: mouseOver;
     animation-duration: 0.3s;
@@ -41,10 +68,10 @@
 @keyframes mouseOver {
     0%   {
             box-shadow: 5px 10px #888888;
-            border: 1px solid black;
+            border: 1px solid rgb(134, 134, 134);
         }
     100% {
             box-shadow: 2px 5px #888888;
-            border: 3px solid black;
+            border: 3px solid rgb(134, 134, 134);
         }
 }
